packages/build/tests/error/fixtures/build_command/file.js
const { exit } = require('process')

exit(1)
